--- a/julia_wilson_snowshoe_report.Rmd
+++ b/julia_wilson_snowshoe_report.Rmd
@@ -275,6 +275,41 @@ Despite the regression line illustrating a positive correlation, the R^2 and Pea
 -	Male juvenile hares have a higher mean weight than female juvenile hares 
 -	There is a moderate correlation between weight and hind foot length
 
+**Citations**
+data citation: 
+Kielland, K., F.S. Chapin, R.W. Ruess, and Bonanza Creek LTER. 2017. Snowshoe hare physical data in Bonanza Creek Experimental Forest: 1999-Present ver 22. Environmental Data Initiative. https://doi.org/10.6073/pasta/03dce4856d79b91557d8e6ce2cbcdc14
+
+'here' package:  
+Kirill Müller (2020). here: A Simpler Way to Find Your Files. R package version 1.0.1.
+  https://CRAN.R-project.org/package=here
+
+'tidyverse' package: 
+Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source Software, 4(43), 1686,
+  https://doi.org/10.21105/joss.01686
+  
+'janitor' package:
+Sam Firke (2021). janitor: Simple Tools for Examining and Cleaning Dirty Data. R package version 2.1.0.
+  https://CRAN.R-project.org/package=janitor
+
+'lubridate' package: 
+Garrett Grolemund, Hadley Wickham (2011). Dates and Times Made Easy with lubridate. Journal of Statistical
+  Software, 40(3), 1-25. URL https://www.jstatsoft.org/v40/i03/.
+
+'kableExtra' package: 
+Hao Zhu (2021). kableExtra: Construct Complex Table with 'kable' and Pipe Syntax. R package version 1.3.4.
+  https://CRAN.R-project.org/package=kableExtra
+  
+'effsize' package: 
+Torchiano M (2020). _effsize: Efficient Effect Size Computation_. doi: 10.5281/zenodo.1480624 (URL:
+https://doi.org/10.5281/zenodo.1480624), R package version 0.8.1, <URL:
+https://CRAN.R-project.org/package=effsize>.
+
+'ggbeeswarm' package: 
+Erik Clarke and Scott Sherrill-Mix (2017). ggbeeswarm: Categorical Scatter (Violin Point) Plots. R package
+  version 0.6.0. https://CRAN.R-project.org/package=ggbeeswarm
+```
+
+
 ## End Task 4
 
 
